fix vertical spacing of user page dots

--- a/public/apps/whiteboard/styles.css
+++ b/public/apps/whiteboard/styles.css
@@ -235,7 +235,7 @@ html, body {
 
 .user-dot {
     font-size: medium;
-    margin-bottom: -1em;
+    margin-bottom: -1.7em;
     padding: 0px;
 }
 
